# Diary-Cornell

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  DIARY_CORNELL_MASTER_HANDOFF.md  PROJECT_STATE_FOR_HANDOFF.md  README.md  YOL_HARITASI.md  diary_prompt.md  diary_prompt_v2.md  journal_ai_reporter_prompt.md
.github/workflows/: ci.yml
cornell-diary/: .env.example  .gitignore  LICENSE  OPERATIONS.md  README.md  SPRINT_REPORT_DIARY_UPDATES.md  SYNC_BEHAVIOR.md  THREAT_MODEL.md  docker-compose.yml  index.html  package.json  pnpm-lock.yaml  vitest.config.ts
cornell-diary/.github/workflows/: ci.yml
cornell-diary/android-overrides/: AndroidManifest.xml  README.md  app-build.gradle.kts
cornell-diary/android-overrides/res/xml/: network_security_config.xml
cornell-diary/docs/: SECURITY_CHECKLIST_DIARY.md
cornell-diary/scripts/: android-env.sh  apply_android_overrides.sh
cornell-diary/src/: App.tsx  main.tsx
cornell-diary/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
cornell-diary/src-tauri/capabilities/: default.json
cornell-diary/src-tauri/migrations/: 001_initial.sql
cornell-diary/src-tauri/postgres_migrations/: 0001_initial.sql  0002_sync_metadata.sql  0003_pending_ops.sql  0004_baseline_version.sql  0005_cloud_profiles.sql  0006_llm_settings.sql
cornell-diary/src-tauri/sqlite_migrations/: 0001_initial.sql  0002_sync_metadata.sql  0003_pending_ops.sql  0004_baseline_version.sql  0005_cloud_profiles.sql  0006_llm_settings.sql
cornell-diary/src-tauri/src/: error.rs  lib.rs  main.rs
cornell-diary/src-tauri/src/commands/: cloud_service.rs  crdt.rs  entries.rs  llm.rs  mdns.rs  mod.rs  profile.rs  sync.rs
cornell-diary/src-tauri/src/crdt/: document.rs  mod.rs  node.rs  operations.rs  pending_ops.rs  ws_client.rs  ws_proto.rs
cornell-diary/src-tauri/src/db/: cloud_profile.rs  llm_settings.rs  mod.rs  models.rs  pool.rs  postgres_impl.rs  repository.rs  sqlite_impl.rs  test_helpers.rs
cornell-diary/src-tauri/src/migration/: migrate_command.rs  mod.rs  sqlite_reader.rs
cornell-diary/src-tauri/src/sync/: auth.rs  bridge_client.rs  client.rs  conflict.rs  engine.rs  meta.rs  mod.rs  models.rs  network.rs  scheduler.rs
cornell-diary/src/components/common/: AppToolbar.tsx  DateNavigator.tsx  ErrorBoundary.tsx  SaveIndicator.tsx
cornell-diary/src/constants/: config.ts  keyboardMap.ts
cornell-diary/src/db/: IDiaryRepository.ts  RepositoryContext.tsx  SQLiteRepository.ts  TauriRepository.ts
cornell-diary/src/hooks/: useActiveProfile.ts  useCrdtChannel.ts  useDateNavigator.ts  useDiary.ts  useKeyboardShortcuts.ts  usePlatform.ts  useSyncStatus.ts  useTheme.ts
cornell-diary/src/locales/: en.json  index.ts  tr.json
cornell-diary/src/pages/: ArchivePage.tsx  DiaryPage.tsx  MigrationOnboarding.tsx  NotFoundPage.tsx  SettingsPage.tsx  SyncPage.tsx
cornell-diary/src/stores/: settingsStore.ts  syncStore.ts
cornell-diary/src/styles/: cornell.css  globals.css  themes.css
cornell-diary/src/sync/: conflictResolver.ts  exporter.ts  importer.ts  qrAssembler.ts  qrChunker.ts
cornell-diary/src/types/: cloudProfile.ts  cloudSync.ts  crdt.ts  diary.ts  llmSettings.ts  settings.ts  sync.ts
cornell-diary/src/utils/: cloudError.ts  crypto.ts  date.ts  deviceId.ts  logger.ts  sanitize.ts  validation.ts
cornell-diary/tests/: setup.ts
cornell-diary/tests/integration/: useDiary.test.tsx
cornell-diary/tests/unit/: SaveIndicator.test.tsx  TauriRepository.test.ts  cloudProfile.test.ts  cloudSync.test.ts  conflictResolver.test.ts  crypto.test.ts  date.test.ts  exporter.test.ts  importer.test.ts  llmSettings.test.ts  locales.test.ts  qrChunker.test.ts  repositoryMapping.test.ts  sanitize.test.ts  stores.test.ts
(+19 files in other folders)
