[package]
name = "cornell-diary"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "cornell_diary_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# tauri-plugin-sql kept here through FAZ 1.2 — frontend still calls it directly
# while Repository pattern bridges old + new. Removed in FAZ 1.3.
tauri-plugin-sql = { version = "2.4.0", features = ["sqlite"] }
tauri-plugin-fs = "2.5.0"
tauri-plugin-dialog = "2.7.0"
tauri-plugin-os = "2.3.2"
tauri-plugin-clipboard-manager = "2.3.2"

# --- FAZ 1: Postgres + repository pattern ---
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "macros", "chrono", "uuid"] }
tokio = { version = "1.40", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
async-trait = "0.1"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
url = "2.5"

# Read SQLite during one-time migration (FAZ 1.2). Bundled feature so we don't
# rely on the system libsqlite — keeps cross-compilation simple.
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }

[dev-dependencies]
tokio = { version = "1.40", features = ["test-util", "macros", "rt-multi-thread"] }
tempfile = "3.13"
serial_test = "3"

